Refactor search/recommendation